# HART-digital

./: .env.prod  .env.prod.db  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
project/: Dockerfile  req.txt
project/project/: settings.py  urls.py
project/static/css/: style.css
project/static/js/: custom.js
project/tasks/: forms.py  models.py  urls.py  views.py
project/tasks/migrations/: 0001_initial.py
project/tasks/templatetags/: tasks_tags.py
project/templates/: base.html
project/templates/tasks/: create_task.html  delete_task.html  main.html  update_task.html
